--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "nix-shell-action",
+  "version": "1.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Run any command you like in a deterministic Nix shell on Linux and macOS.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,12 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/workflow/nix-shell-action.git"
   },
   "keywords": [
     "actions",
-    "node",
-    "setup"
+    "nix",
+    "ci",
+    "dependency-management"
   ],
   "author": "",
   "license": "MIT",
