--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,21 +12,50 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install Nix
-        uses: cachix/install-nix-action@v14.1
+        uses: cachix/install-nix-action@v17
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixpkgs-unstable
       - run: |
           npm install
       - run: |
           npm run all
-  test: # make sure the action works on a clean machine without building
+  test-latest-nix:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Nix
-        uses: cachix/install-nix-action@v14.1
+        uses: cachix/install-nix-action@v17
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixpkgs-unstable
+      - name: Test Basic Bash Shell
+        uses: ./
+        with:
+          script: |
+            echo "test!"
+      - name: Test Bash Shell with Packages
+        uses: ./
+        with:
+          packages: hello,docker
+          script: |
+            hello
+            command -v docker
+      - name: Test Bash Shell with Enviroment
+        uses: ./
+        env:
+          FUTURE: now
+          ANSWER: 42
+        with:
+          script: |
+            echo The future is $FUTURE
+            [[ -z "${ANSWER}" ]] && exit 1 || exit 0
+  test-legacy-nix:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Nix
+        uses: cachix/install-nix-action@v17
+        with:
+          nix_path: nixpkgs=channel:release-21.05
       - name: Test Basic Bash Shell
         uses: ./
         with:
