ci: fix build error

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixpkgs-unstable
       - run: |
-          npm install
+          npm install --legacy-peer-deps
       - run: |
           npm run all
   test-latest-nix:
