--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,3 +81,27 @@ jobs:
           script: |
             echo The future is $FUTURE
             [[ -z "${ANSWER}" ]] && exit 1 || exit 0
+
+  test-flakes:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Nix
+        uses: cachix/install-nix-action@v18
+        with:
+          nix_path: nixpkgs=channel:release-21.05
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - name: Test Basic Bash Shell with Local Flake
+        uses: ./
+        with:
+          flakes: .#hello
+          script: |
+            hello
+      - name: Test Bash Shell with Local and External Flakes
+        uses: ./
+        with:
+          flakes: .#hello,nixpkgs#docker
+          script: |
+            hello
+            command -v docker
