fix: add new params to action.yml

--- a/action.yml
+++ b/action.yml
@@ -7,15 +7,22 @@ inputs:
     description: 'Interpreter to use in the nix shell shebang'
     default: 'bash'
   packages:
-    required: true
-    description: 'Comma separated list of packages that are to be available in your shell'
+    required: false
+    description: 'Comma-separated list of packages to pre-install in your shell. Defaults to simply "bash". Cannot be used together with the flakes option'
     default: 'bash'
+  flakes:
+    required: false
+    description: 'Comma-separated list of fully qualified flakes to pre-install in your shell. Use either packages or flakes. Cannot be used together with the packages option'
   script:
     required: true
     description: 'The actual script to execute in the shell'
+  working-directory:
+    required: false
+    description: 'Execute the script inside the specified working directory instead of the repository root. Example: path/to/dir'
+
 branding:
   color: 'blue'
   icon: 'chevron-right'
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'dist/index.js'
