--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on: # rebuild any PRs and main branch changes
   push:
     branches:
       - main
+      - support-devshell
       - 'releases/*'
 
 jobs:
@@ -141,6 +142,14 @@ jobs:
           script: |
             pwd
             figlet "I'm from the devshell, baby."
+      - name: Test Bash Shell with Local Flake (named devShell)
+        uses: ./
+        with:
+          flakes: .#named-shell
+          flakes-from-devshell: true
+          script: |
+            pwd
+            figlet "I'm from the devshell name 'named-shell', baby."
 
   test-flakes-from-devshell-in-working-directory:
     runs-on: ubuntu-latest
@@ -151,11 +160,11 @@ jobs:
         with:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      - name: Test Bash Shell with Local and External Flakes
+      - name: Test Bash Shell with Local Flake in a Working Directory
         uses: ./
         with:
-          working-directory: test/working-directory
+          working-directory: test/devshell-flake
           flakes-from-devshell: true
           script: |
             pwd
-            cmatrix
+            cmatrix -h
