--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
@@ -29,17 +29,23 @@
     "@actions/core": "^1.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
     "@types/jest": "^27.2.5",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-github": "^5.0.1",
-    "eslint-plugin-jest": "^27.2.3",
-    "jest": "^27.2.5",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "prettier": "2.8.8",
-    "ts-jest": "^27.1.4",
+    "prettier": "3.3.2",
+    "ts-jest": "^29.1.5",
     "typescript": "^4.9.5"
   }
 }
