--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,6 +102,7 @@ jobs:
           pure: true
           script: |
             hello
+            echo $JAVA_HOME
             [[ -z "${JAVA_HOME}" ]] && exit 0 || exit 1
 
   test-flakes:
@@ -143,6 +144,7 @@ jobs:
           pure: true
           script: |
             hello
+            echo $JAVA_HOME
             [[ -z "${JAVA_HOME}" ]] && exit 0 || exit 1
 
   test-local-flake-in-working-directory:
