ci: add failing test for custom-devshell option

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,6 +146,24 @@ jobs:
             pwd
             figlet "I'm from the devshell, baby."
 
+  test-flakes-from-devshell-with-custom-shell:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Nix
+        uses: cachix/install-nix-action@v27
+        with:
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - name: Test Bash Shell with Local and External Flakes
+        uses: ./
+        with:
+          flakes-from-devshell: true
+          custom-devshell: ci
+          script: |
+            pwd
+            ponysay "I'm from the CI devshell, baby."
+
   test-flakes-from-devshell-in-working-directory:
     runs-on: ubuntu-latest
     steps:
