--- a/.gitignore
+++ b/.gitignore
@@ -96,4 +96,17 @@ Thumbs.db
 
 # Ignore built ts files
 __tests__/runner/*
-lib/**/*
+
+# IDE files
+.idea
+.vscode
+*.code-workspace
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
