--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,20 @@ jobs:
           npm install
       - run: |
           npm run all
+  test-nix-develop:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Nix
+        uses: cachix/install-nix-action@v29
+        with:
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - name: Test Nix Develop
+        run: |
+          figlet "Should fail" || true
+          nix develop --command \
+            figlet "Should pass"
   test-latest-nix:
     runs-on: ubuntu-latest
     steps:
